# antrelay

./: .dockerignore  .editorconfig  .envrc  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  arch.md  build.rs  default.nix  flake.nix  rust-toolchain.toml
.cargo/: config
.github/workflows/: rust.yml  tag.yml
codec/: Cargo.toml
codec/proptest-regressions/: all_delimiters.txt
codec/src/: all_delimiters.rs  cobs.rs  compose.rs  lib.rs  packed_struct.rs
message/: Cargo.toml
message/proptest-regressions/: header.txt
message/src/: ant.rs  bytes_wrap.rs  checksum.rs  crc.rs  crc_wrap.rs  cs.rs  header.rs  header_packet.rs  lib.rs  magic_value.rs  mission_epoch.rs  source_info.rs
message/src/downlink/: log.rs  mod.rs  value.rs
message/src/payload/: ack.rs  log.rs  mod.rs  realtime_status.rs
net/: Cargo.toml
net/src/: datagram.rs  lib.rs  unix.rs
proptest-regressions/message/: magic_value.txt
runtime/: Cargo.toml
runtime/src/: commander.rs  context.rs  lib.rs  serial.rs  state_machine.dot  state_machine.rs  time_service.rs
runtime/src/ground/: downlink.rs  mod.rs  uplink.rs
runtime/src/serial/: ant_decode.rs  commander.rs  mod.rs  raw.rs  serde.rs
runtime/src/signals/: mod.rs  unix.rs  windows.rs
runtime/src/system/: mod.rs  override_registry.rs  seq_service.rs
runtime/tests/: actix.rs
src/: build.rs  downlink.rs  lib.rs  log.rs  macros.rs  main.rs  message.rs  mission_epoch.rs  options.rs  packet_io.rs  relay.rs  standard_graph.rs  stream_monad.rs  trace.rs  uplink.rs  util.rs
src/futures/: mod.rs  scan.rs
src/io/: command_sequencer.rs  mod.rs
src/message/: checksum.rs  crc_wrap.rs  header.rs  header_packet.rs  magic_value.rs  mod.rs  payload.rs
src/message/crc_wrap/: ack.rs  mod.rs
src/message/payload/: ack.rs  log.rs  mod.rs  realtime_status.rs
src/message/util/: checksum.rs  header_packet.rs  magic_value.rs  mod.rs
src/net/: mod.rs  unix.rs
src/relay/: control.dot  control.rs  downlink.rs  mod.rs  serial.rs
src/relay/serial/: control.dot  control.rs  mod.rs
src/signals/: mod.rs  unix.rs  windows.rs
src/trace/: downlink.rs  mod.rs
src/tracing/: event_stream.rs  mod.rs  visit.rs
src/util/: clock.rs  dynload.rs  mod.rs  net.rs  reader.rs  seq.rs  state.rs  unix.rs
src/util/net/: datagram.rs  mod.rs
src/util/tracing/: event_stream.rs  mod.rs  visit.rs
src/util/unix/: dynload.rs  mod.rs  multisocket.rs
tests/: 5v.rs  common.rs
tests/common/: dummy_clock.rs  harness.rs  mod.rs
tracing/: Cargo.toml
tracing/src/: event_stream.rs  lib.rs  visit.rs
util/: Cargo.toml  build.rs
util/src/: build.rs  lib.rs  macros.rs
util/src/futures/: unfold_state.rs
