[package]
name = "antrelay"
authors = ["Nathan Perry <np@nathanperry.dev>"]
version = "0.1.0"
edition = "2021"

build = "build.rs"

[workspace]
members = [
    "codec"
]

[dependencies]
async-trait = "0.1"
futures = "0.3"
stream-cancel = "0.8"
pin-project-lite = "0.2"
actix = "0.13"
tokio-serial = "5.4"
actix-broker = "0.4"
tokio = { version = "1.19", features = ["macros"] }
tokio-util = "0.7"
tokio-stream = "0.1"

serde = { version = "1.0.136", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"
brotli = "3.3"
packed_struct = { version = "0.10", features = ["use_serde"] }
crc = "3.0"
byteorder = "1.4"
smallvec = "1.8"
hex = "0.4"
cobs = { version = "0.2.3", optional = true }
bincode = "1.3"
bytes = "1.1"
aho-corasick = "0.7"

eyre = "0.6"
either = "1.6"
backoff = { version = "0.4", features = ["futures", "async-std"] }
thiserror = "1.0"

nonempty = "0.8"
lazy_static = "1.4"
cfg-if = "1.0"
derive_more = "0.99"
structopt = "0.3"
fnv = "1.0"
chrono = "0.4"
dashmap = "5.3"
tap = "1.0"
once_cell = "1.12"
rustyline-async = "0.2"
shlex = "1.1"

num-traits = "0.2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-unwrap = "0.9"
tracing-log = "0.1"

paste = "1.0"


[features]
default = ["serial_cobs"]
serial_cobs = ["cobs"]

[dev-dependencies]
proptest = "1.0"
sluice = "0.5"

[build-dependencies]
vergen = "6.0"
anyhow = "1.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
