[package]
name = "antrelay"
authors = ["Nathan Perry <np@nathanperry.dev>"]
version = "0.1.0"
edition = "2021"


[workspace]
members = [
    "codec",
    "runtime",
    "message",
    "util",
    "net",
    "tracing",
]

[dependencies]
util = { path = "./util", package = "antrelay-util" }
message = { path = "./message", package = "antrelay-message" }
codec = { path = "./codec", package = "antrelay-codec" }
net = { path = "./net", package = "antrelay-net" }
traceutil = { path = "./tracing", package = "antrelay-tracing" }
runtime = { path = "./runtime", package = "antrelay-runtime" }

futures = "0.3"
actix = "0.13"
actix-broker = "0.4"
tokio-serial = "5.4"
tokio = { version = "1.19", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
async-compat = "0.2"

serde = { version = "1.0.136", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"
packed_struct = { version = "0.10", features = ["use_serde"] }
byteorder = "1.4"
smallvec = "1.8"
hex = "0.4"
bincode = "1.3"
bytes = "1.1"
aho-corasick = "0.7"

eyre = "0.6"
either = "1.6"
backoff = { version = "0.4", features = ["futures", "async-std"] }
thiserror = "1.0"

nonempty = "0.8"
lazy_static = "1.4"
cfg-if = "1.0"
derive_more = "0.99"
structopt = "0.3"
fnv = "1.0"
chrono = "0.4"
dashmap = "5.3"
tap = "1.0"
once_cell = "1.12"
rustyline-async = "0.2"
shlex = "1.1"

num-traits = "0.2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-unwrap = "0.9"
tracing-log = "0.1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
