[package]
name = "antrelay"
authors = ["Nathan Perry <np@nathanperry.dev>"]
version = "0.3.0"
edition = "2021"

default-run = "antrelay"

[workspace]
members = [
    "codec",
    "runtime",
    "message",
    "util",
    "net",
]

[dependencies]
util = { path = "./util", package = "antrelay-util" }
message = { path = "./message", package = "antrelay-message" }
codec = { path = "./codec", package = "antrelay-codec" }
net = { path = "./net", package = "antrelay-net" }
runtime = { path = "./runtime", package = "antrelay-runtime" }

futures = "0.3"
actix = "0.13"
actix-broker = "0.4"
tokio-serial = "5.4"
tokio = { version = "1.19", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
async-compat = "0.2"
tokio-retry = "0.3"

packed_struct = { version = "0.10", features = ["use_serde"] }
hex = "0.4"
bincode = "1.3"

structopt = "0.3"
tap = "1.0"
cfg-if = "1.0"
rustyline-async = "0.2"
bytes = "1.1"
eyre = "0.6"
shlex = "1.1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-log = "0.1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
