[package]
name = "antrelay-message"
authors = ["Nathan Perry <np@nathanperry.dev>"]
version = "0.1.0"
edition = "2021"

[dependencies]
packed_struct = "0.10"
derive_more = "0.99"
once_cell = "1.13"
lazy_static = "1.4"
chrono = "0.4"
crc = "3.0"
tracing = "0.1"
smallvec = "1.9"
num-traits = "0.2"
hex = "0.4"
tap = "1.0"
bytes = "1.1"
serde = { version = "1.0", features = ["derive"] }
paste = "1.0"

[dev-dependencies]
proptest = "1.0"
byteorder = "1.4"
serde_json = "1.0"
