[package]
name = "antrelay-runtime"
authors = ["Nathan Perry <np@nathanperry.dev>"]
version = "0.1.0"
edition = "2021"

[dependencies]
antrelay-codec = { path = "../codec" }
actix = "0.13"
actix-broker = "0.4"
bytes = "1.1"
once_cell = "1.13"
tokio = "1.20"
futures = "0.3"
tracing = "0.1"
derive_more = "0.99"
