[package]
name = "antrelay-runtime"
authors = ["Nathan Perry <np@nathanperry.dev>"]
version = "0.1.0"
edition = "2021"

[dependencies]
antrelay-codec = { path = "../codec" }
message = { path = "../message", package = "antrelay-message" }
util = { path = "../util", package = "antrelay-util" }
net = { path = "../net", package = "antrelay-net" }

actix = "0.13"
actix-broker = "0.4"
bytes = "1.1"
once_cell = "1.13"
tokio = "1.20"
futures = "0.3"
tracing = "0.1"
derive_more = "0.99"
packed_struct = "0.10"
tokio-stream = "0.1"
fnv = "1.0"
